--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+#wiper {
+  opacity: 0;
+  transition: opacity 0.2s ease-out;
+}
